--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,13 @@
   </head>
   <body>
     <div class="main">
-      <div class="emoji mb-6">💣🤯💥</div>
-      <button class="button">Boom?</button>
+      <link rel=”icon” href=”images/apple-touch-icon.png” ”>
+
+      <link rel=”icon” href=”images/favicon-16x16.png” sizes=”16×16″ >
+      <link rel=”icon” href=”images/favicon-32x32.png” sizes=”32×32″ >
+
+      <link rel=android-chrome href=”images/android-chrome-192x192.png” sizes=”192×192″ >
+      <link rel=android-chrome href=”images/android-chrome-512x512.png” sizes=”512×512″ >
     </div>
   </body>
 </html>
